# MRS-MPC

./: package.xml  setup.cfg  setup.py
turtlebot_dual_controller/: ACADOS.py  Single_MPC.py  dual_controller.py  dual_mpc.py  dual_mpc_EKF.py  dual_mpc_V1.py  dual_mpc_V2.py  dual_mpc_V3.py
