<?xml version="1.0"?>
<package format="3">
  <name>turtlebot_dual_controller</name>
  <version>0.0.0</version>
  <description>ROS 2 package to controller two turtlebots simultaneusly</description>
  <maintainer email="hiiimaazz@gmail.com">ibrahim</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
